--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -640,20 +640,20 @@ fcf:
 fcf-conv-comp:
   task: >-
     Calculate change and assess degradation/improvement in `Free Cash Flow Conversion Ratio` of {COMPANY}
-    from corresponding one-year-preceding previous fiscal period to current {PERIOD} fiscal period
+    from corresponding one-year-preceding previous annual fiscal period to current {PERIOD} annual fiscal period
 
   sub-plans:
     - task: |-
-        Calculate `Free Cash Flow Conversion Ratio` as percentage values according to formula:
+        Calculate `Free Cash Flow Conversion Ratio` of {COMPANY} as percentage values according to formula:
 
         `Free Cash Flow Conversion Ratio` = (
           (`Cash Flows from Operations, a.k.a. Operating Cash Flows` - `Capital Expenditure, a.k.a. CapEx`)
-          / `Net Income, a.k.a. Net Profit (Attributable to Shareholders)`
+          / `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`
         )
 
-        for following two fiscal periods:
-        - one-year-before previous fiscal period preceding {PERIOD}; and
-        - {PERIOD} fiscal period
+        for following two annual fiscal periods:
+        - one-year-before previous annual fiscal period preceding {PERIOD}; and
+        - {PERIOD} annual fiscal period
 
       sub-plans:
         # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
@@ -665,22 +665,22 @@ fcf-conv-comp:
 
             on one same `Cash Flow(s) Statement` of {COMPANY}
 
-            for following two fiscal periods:
-            - one-year-before previous fiscal period preceding {PERIOD}; and
-            - {PERIOD} fiscal period
+            for following two annual fiscal periods:
+            - one-year-before previous annual fiscal period preceding {PERIOD}; and
+            - {PERIOD} annual fiscal period?
 
         # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
         - task: |-
-            What are values in dollars of `Net Income, a.k.a. Net Profit (Attributable to Shareholders)`
+            What are values in dollars of `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`
             (or most similar-meaning reported line item)
 
-            on one same `(Consolidated) (Comprehensive) Income Statement,
-            a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
-            or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+            on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+            or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+            (or most similar-meaning statement)
 
-            for following two fiscal periods:
-            - one-year-before previous fiscal period preceding {PERIOD}; and
-            - {PERIOD} fiscal period
+            of {COMPANY} for following two annual fiscal periods:
+            - one-year-before previous annual fiscal period preceding {PERIOD}; and
+            - {PERIOD} annual fiscal period?
 
     - task: >-
         Calculate difference between two calculated `Free Cash Flow Conversion Ratio` percentage values
