--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -819,18 +819,33 @@ debt-comp:
 
   sub-plans:
     - task: |-
-        What are values in dollars of:
-        - `Long-Term Debt`; and
-        - `Short-Term Debt`
-        (or most similar-meaning reported line items to those)
+        Calculate `Total Debt` of {COMPANY} in dollar values according to formula:
 
-        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`
-        (or most similar-meaning statement) of {COMPANY}
-        (and NOT Balance Sheets of its acquired and/or divested companies)
+        `Total Debt` = `Long-Term Debt` + `Short-Term Debt, or Current Portion of (Long-Term) Debt`
 
         as at following two points in time:
         - one-year-before previous annual fiscal period end preceding {PERIOD}; and
-        - current {PERIOD} annual fiscal period end?
+        - current {PERIOD} annual fiscal period end
+
+      sub-plans:
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of:
+            - `Long-Term Debt`; and
+            - `Short-Term Debt, or Current Portion of (Long-Term) Debt`
+            (or most similar-meaning reported line items to those)
+
+            on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`
+            (or most similar-meaning statement) of {COMPANY}
+            (and NOT Balance Sheets of its acquired and/or divested companies)
+
+            as at following two points in time:
+            - one-year-before previous annual fiscal period end preceding {PERIOD}; and
+            - current {PERIOD} annual fiscal period end?
+
+    - task: >-
+        Calculate difference between two calculated `Total Debt` dollar values
+        and assess whether `Total Debt` meaningfully degraded or improved
 
 
 # CAPITAL-INTENSIVENESS METRIC EVALUATION
