--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -1,4 +1,4 @@
-financebench_id_00499: capital-intensiveness
+financebench_id_00499: cap-intens
 financebench_id_00807: quick-ratio  #
 financebench_id_02987: fa-turnover-ratio  #
 financebench_id_07966: capex-as-pct-of-rev-3y-avg  #
@@ -27,7 +27,7 @@ financebench_id_10130: days-payable-outstanding
 financebench_id_02981: op-margin-3y-avg  #
 financebench_id_00005: work-cap
 financebench_id_05915: fa-turnover-ratio
-financebench_id_00790: capital-intensiveness
+financebench_id_00790: cap-intens
 financebench_id_04103: cash-conv-cyc
 financebench_id_03471: work-cap-ratio  #
 financebench_id_04854: fcf  #
@@ -37,7 +37,7 @@ financebench_id_04412: asset-turnover-ratio  #
 financebench_id_03031: work-cap  #
 financebench_id_03849: capex-as-pct-of-rev-3y-avg  #
 financebench_id_01911: int-cov-ratio
-financebench_id_00552: debt
+financebench_id_00552: debt-comp
 financebench_id_04458: ebitda-margin
 financebench_id_04302: cogs-margin
 financebench_id_04080: inv-turnover-ratio  #
@@ -45,7 +45,7 @@ financebench_id_00080: work-cap
 financebench_id_03620: unadjusted-ebitda  # TODO: but also less CapEx for question
 financebench_id_04481: ebitda-margin
 financebench_id_00216: quick-ratio  #
-financebench_id_00215: capital-intensiveness
+financebench_id_00215: cap-intens
 financebench_id_06247: days-payable-outstanding  #
 financebench_id_04784: op-margin-comp  #
 financebench_id_06741: ebitda-margin-3y-avg
