--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -889,26 +889,6 @@ debt-comp:
 # CAPITAL-INTENSIVENESS METRIC EVALUATION
 # =======================================
 
-capital-intensiveness:  # TODO: check
-  task: Is {COMPANY} a capital-intensive business based on {YEAR} data?
-  sub-plans:
-    - task:
-        In dollars, what was the capital expenditures in the given fiscal
-        year(s)?
-    - task:
-        In dollars, what was the revenue (net sales) in the given fiscal
-        year(s)?
-    - task:
-        In dollars, what were the current assets in the given fiscal year(s)?
-
-    - task:
-        In dollars, what were the total assets in the given fiscal year(s)?
-        total assets on the balance sheet.
-    - task:
-        In dollars, what was the net income in the given fiscal year(s)? income
-        or income statement
-
-
 capex-as-pct-of-rev-3y-avg:
   task: >-
     Calculate 3-year average of Capital Expenditure (CapEx) as percentage of Revenue for {COMPANY} as percentage value
@@ -971,3 +951,59 @@ roa:
         as at following two annual fiscal period ends:
         - one-year-before previous annual fiscal period end preceding {PERIOD}; and
         - {PERIOD} annual fiscal period end?
+
+
+cap-intens:
+  task: >-
+    Assess whether {COMPANY} is capital-intensive according to {PERIOD} fiscal period data
+
+  sub-plans:
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency;
+    # retrieve individual starting & ending balance values only, without taking division or simple arithmetic average
+    # because RAG LMs may not be good at calculation & mathematical reasoning
+    - task: |-
+        What are values in dollars of:
+        - `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)`; and
+        - `Total Assets`
+        (or most similar-meaning reported line item to those)
+
+        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`
+        (or most similar-meaning statement) of {COMPANY}
+        (and NOT Balance Sheets of its acquired and/or divested companies)
+
+        as at following two annual fiscal period ends:
+        - one-year-before previous annual fiscal period end preceding {PERIOD}; and
+        - {PERIOD} annual fiscal period end?
+
+    - task: >-
+        What is value in dollars of `Capital Expenditure, a.k.a. CapEx` (or most similar-meaning reported line item)
+        on `Cash Flow(s) Statement` of {COMPANY} for {PERIOD} fiscal period?
+
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+    - task: >-
+        What are values in dollars of:
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and
+        - `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`
+        (or most similar-meaning reported line items to those)
+
+        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for {PERIOD} fiscal period?
+
+    - task: |-
+        Assess whether {COMPANY} is capital-intensive according to {PERIOD} fiscal period data
+
+        Capital-intensive businesses tend to have one or several of the following characteristics:
+
+        - high `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` as proportion of `Total Assets`;
+
+        - high `Capital Expenditure, a.k.a. CapEx` relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and/or
+
+        - low `Return on (Total) Assets, a.k.a. RoA or RoTA` according to formula:
+
+          `Return on (Total) Assets, a.k.a. RoA or RoTA` = (
+            `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)` /
+            `average Total Assets, typically between two consecutive fiscal year-ends`
+          )
