update examples/FinanceBench/expert-knowledge.txt & expert-plan-templates.yml re: Capital-Intensiveness Evaluation

--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -999,6 +999,8 @@ cap-intens:
 
         - high `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` as proportion of `Total Assets`;
 
+        - high `Total Assets` relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`;
+
         - high `Capital Expenditure, a.k.a. CapEx` relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and/or
 
         - low `Return on (Total) Assets, a.k.a. RoA or RoTA` according to formula:
